parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    DIAGONAL
    FOR
    LLAVESA
    LLAVESC
    STRUCT
    ignore_COMENTARIOMULTILINEA
    ignore_COMENTARIOUNILINEA

Grammar

Rule 0     S' -> inicio
Rule 1     inicio -> instrucciones
Rule 2     fininstr -> PUNTOCOMA
Rule 3     instrucciones -> instrucciones instruccion
Rule 4     instrucciones -> instruccion
Rule 5     instruccion -> imprimir_instr fininstr
Rule 6     instruccion -> asignacion_instr fininstr
Rule 7     instruccion -> declaracion_var_instr fininstr
Rule 8     instruccion -> funciones_instr fininstr
Rule 9     instruccion -> while_instr fininstr
Rule 10    instruccion -> llamada_funcion_instr fininstr
Rule 11    instruccion -> sentencia_transferencia fininstr
Rule 12    instruccion -> error fininstr
Rule 13    expresion -> PARENTESISA expresion PARENTESISC
Rule 14    expresion -> CADENA
Rule 15    expresion -> CARACTER
Rule 16    expresion -> ENTERO
Rule 17    expresion -> DOBLE
Rule 18    expresion -> NOTHING
Rule 19    expresion -> ID
Rule 20    expresion -> bandera
Rule 21    expresion -> expresion MAS expresion
Rule 22    expresion -> expresion MENOS expresion
Rule 23    expresion -> expresion ASTERISCO expresion
Rule 24    expresion -> expresion DIVISION expresion
Rule 25    expresion -> expresion POTENCIA expresion
Rule 26    expresion -> expresion PORCENTAJE expresion
Rule 27    expresion -> expresion IGUALIGUAL expresion
Rule 28    expresion -> expresion DIFERENTE expresion
Rule 29    expresion -> expresion MENOR expresion
Rule 30    expresion -> expresion MAYOR expresion
Rule 31    expresion -> expresion MENORIGUAL expresion
Rule 32    expresion -> expresion MAYORIGUAL expresion
Rule 33    expresion -> expresion AND expresion
Rule 34    expresion -> expresion OR expresion
Rule 35    expresion -> NOT expresion
Rule 36    expresion -> MENOS expresion
Rule 37    expresion -> llamada_funcion_instr
Rule 38    expresion -> PARSE PARENTESISA INT64 COMA expresion PARENTESISC
Rule 39    expresion -> PARSE PARENTESISA FLOAT64 COMA expresion PARENTESISC
Rule 40    expresion -> STRING PARENTESISA expresion PARENTESISC
Rule 41    bandera -> TRUE
Rule 42    bandera -> FALSE
Rule 43    tipo -> INT64
Rule 44    tipo -> FLOAT64
Rule 45    tipo -> STRING
Rule 46    tipo -> CHAR
Rule 47    tipo -> BOOL
Rule 48    asignacion_instr -> ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
Rule 49    asignacion_instr -> ID IGUAL expresion
Rule 50    declaracion_var_instr -> LOCAL ID
Rule 51    declaracion_var_instr -> GLOBAL ID
Rule 52    declaracion_var_instr -> GLOBAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
Rule 53    declaracion_var_instr -> LOCAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
Rule 54    declaracion_var_instr -> GLOBAL ID IGUAL expresion
Rule 55    declaracion_var_instr -> LOCAL ID IGUAL expresion
Rule 56    imprimir_instr -> PRINT PARENTESISA expresion PARENTESISC
Rule 57    imprimir_instr -> PRINTLN PARENTESISA expresion PARENTESISC
Rule 58    funciones_instr -> FUNCTION ID PARENTESISA PARENTESISC instrucciones END
Rule 59    funciones_instr -> FUNCTION ID PARENTESISA parametros PARENTESISC instrucciones END
Rule 60    parametros -> parametros COMA parametro
Rule 61    parametros -> parametro
Rule 62    parametro -> ID DOSPUNTOS DOSPUNTOS tipo
Rule 63    parametro -> ID
Rule 64    llamada_funcion_instr -> ID PARENTESISA PARENTESISC
Rule 65    llamada_funcion_instr -> ID PARENTESISA parametros_llamada PARENTESISC
Rule 66    parametros_llamada -> parametros_llamada COMA parametro_llamada
Rule 67    parametros_llamada -> parametro_llamada
Rule 68    parametro_llamada -> expresion
Rule 69    while_instr -> WHILE expresion instrucciones END
Rule 70    sentencia_transferencia -> RETURN expresion
Rule 71    sentencia_transferencia -> RETURN
Rule 72    sentencia_transferencia -> BREAK
Rule 73    sentencia_transferencia -> CONTINUE

Terminals, with rules where they appear

AND                  : 33
ASTERISCO            : 23
BOOL                 : 47
BREAK                : 72
CADENA               : 14
CARACTER             : 15
CHAR                 : 46
COMA                 : 38 39 60 66
CONTINUE             : 73
DIAGONAL             : 
DIFERENTE            : 28
DIVISION             : 24
DOBLE                : 17
DOSPUNTOS            : 48 48 52 52 53 53 62 62
END                  : 58 59 69
ENTERO               : 16
FALSE                : 42
FLOAT64              : 39 44
FOR                  : 
FUNCTION             : 58 59
GLOBAL               : 51 52 54
ID                   : 19 48 49 50 51 52 53 54 55 58 59 62 63 64 65
IGUAL                : 48 49 52 53 54 55
IGUALIGUAL           : 27
INT64                : 38 43
LLAVESA              : 
LLAVESC              : 
LOCAL                : 50 53 55
MAS                  : 21
MAYOR                : 30
MAYORIGUAL           : 32
MENOR                : 29
MENORIGUAL           : 31
MENOS                : 22 36
NOT                  : 35
NOTHING              : 18
OR                   : 34
PARENTESISA          : 13 38 39 40 56 57 58 59 64 65
PARENTESISC          : 13 38 39 40 56 57 58 59 64 65
PARSE                : 38 39
PORCENTAJE           : 26
POTENCIA             : 25
PRINT                : 56
PRINTLN              : 57
PUNTOCOMA            : 2
RETURN               : 70 71
STRING               : 40 45
STRUCT               : 
TRUE                 : 41
WHILE                : 69
error                : 12
ignore_COMENTARIOMULTILINEA : 
ignore_COMENTARIOUNILINEA : 

Nonterminals, with rules where they appear

asignacion_instr     : 6
bandera              : 20
declaracion_var_instr : 7
expresion            : 13 21 21 22 22 23 23 24 24 25 25 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 36 38 39 40 48 49 52 53 54 55 56 57 68 69 70
fininstr             : 5 6 7 8 9 10 11 12
funciones_instr      : 8
imprimir_instr       : 5
inicio               : 0
instruccion          : 3 4
instrucciones        : 1 3 58 59 69
llamada_funcion_instr : 10 37
parametro            : 60 61
parametro_llamada    : 66 67
parametros           : 59 60
parametros_llamada   : 65 66
sentencia_transferencia : 11
tipo                 : 48 52 53 62
while_instr          : 9

Parsing method: LALR

state 0

    (0) S' -> . inicio
    (1) inicio -> . instrucciones
    (3) instrucciones -> . instrucciones instruccion
    (4) instrucciones -> . instruccion
    (5) instruccion -> . imprimir_instr fininstr
    (6) instruccion -> . asignacion_instr fininstr
    (7) instruccion -> . declaracion_var_instr fininstr
    (8) instruccion -> . funciones_instr fininstr
    (9) instruccion -> . while_instr fininstr
    (10) instruccion -> . llamada_funcion_instr fininstr
    (11) instruccion -> . sentencia_transferencia fininstr
    (12) instruccion -> . error fininstr
    (56) imprimir_instr -> . PRINT PARENTESISA expresion PARENTESISC
    (57) imprimir_instr -> . PRINTLN PARENTESISA expresion PARENTESISC
    (48) asignacion_instr -> . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (49) asignacion_instr -> . ID IGUAL expresion
    (50) declaracion_var_instr -> . LOCAL ID
    (51) declaracion_var_instr -> . GLOBAL ID
    (52) declaracion_var_instr -> . GLOBAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (53) declaracion_var_instr -> . LOCAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (54) declaracion_var_instr -> . GLOBAL ID IGUAL expresion
    (55) declaracion_var_instr -> . LOCAL ID IGUAL expresion
    (58) funciones_instr -> . FUNCTION ID PARENTESISA PARENTESISC instrucciones END
    (59) funciones_instr -> . FUNCTION ID PARENTESISA parametros PARENTESISC instrucciones END
    (69) while_instr -> . WHILE expresion instrucciones END
    (64) llamada_funcion_instr -> . ID PARENTESISA PARENTESISC
    (65) llamada_funcion_instr -> . ID PARENTESISA parametros_llamada PARENTESISC
    (70) sentencia_transferencia -> . RETURN expresion
    (71) sentencia_transferencia -> . RETURN
    (72) sentencia_transferencia -> . BREAK
    (73) sentencia_transferencia -> . CONTINUE

    error           shift and go to state 11
    PRINT           shift and go to state 12
    PRINTLN         shift and go to state 13
    ID              shift and go to state 14
    LOCAL           shift and go to state 15
    GLOBAL          shift and go to state 16
    FUNCTION        shift and go to state 17
    WHILE           shift and go to state 18
    RETURN          shift and go to state 19
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21

    inicio                         shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    asignacion_instr               shift and go to state 5
    declaracion_var_instr          shift and go to state 6
    funciones_instr                shift and go to state 7
    while_instr                    shift and go to state 8
    llamada_funcion_instr          shift and go to state 9
    sentencia_transferencia        shift and go to state 10

state 1

    (0) S' -> inicio .



state 2

    (1) inicio -> instrucciones .
    (3) instrucciones -> instrucciones . instruccion
    (5) instruccion -> . imprimir_instr fininstr
    (6) instruccion -> . asignacion_instr fininstr
    (7) instruccion -> . declaracion_var_instr fininstr
    (8) instruccion -> . funciones_instr fininstr
    (9) instruccion -> . while_instr fininstr
    (10) instruccion -> . llamada_funcion_instr fininstr
    (11) instruccion -> . sentencia_transferencia fininstr
    (12) instruccion -> . error fininstr
    (56) imprimir_instr -> . PRINT PARENTESISA expresion PARENTESISC
    (57) imprimir_instr -> . PRINTLN PARENTESISA expresion PARENTESISC
    (48) asignacion_instr -> . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (49) asignacion_instr -> . ID IGUAL expresion
    (50) declaracion_var_instr -> . LOCAL ID
    (51) declaracion_var_instr -> . GLOBAL ID
    (52) declaracion_var_instr -> . GLOBAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (53) declaracion_var_instr -> . LOCAL ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (54) declaracion_var_instr -> . GLOBAL ID IGUAL expresion
    (55) declaracion_var_instr -> . LOCAL ID IGUAL expresion
    (58) funciones_instr -> . FUNCTION ID PARENTESISA PARENTESISC instrucciones END
    (59) funciones_instr -> . FUNCTION ID PARENTESISA parametros PARENTESISC instrucciones END
    (69) while_instr -> . WHILE expresion instrucciones END
    (64) llamada_funcion_instr -> . ID PARENTESISA PARENTESISC
    (65) llamada_funcion_instr -> . ID PARENTESISA parametros_llamada PARENTESISC
    (70) sentencia_transferencia -> . RETURN expresion
    (71) sentencia_transferencia -> . RETURN
    (72) sentencia_transferencia -> . BREAK
    (73) sentencia_transferencia -> . CONTINUE

    $end            reduce using rule 1 (inicio -> instrucciones .)
    error           shift and go to state 11
    PRINT           shift and go to state 12
    PRINTLN         shift and go to state 13
    ID              shift and go to state 14
    LOCAL           shift and go to state 15
    GLOBAL          shift and go to state 16
    FUNCTION        shift and go to state 17
    WHILE           shift and go to state 18
    RETURN          shift and go to state 19
    BREAK           shift and go to state 20
    CONTINUE        shift and go to state 21

    instruccion                    shift and go to state 22
    imprimir_instr                 shift and go to state 4
    asignacion_instr               shift and go to state 5
    declaracion_var_instr          shift and go to state 6
    funciones_instr                shift and go to state 7
    while_instr                    shift and go to state 8
    llamada_funcion_instr          shift and go to state 9
    sentencia_transferencia        shift and go to state 10

state 3

    (4) instrucciones -> instruccion .

    error           reduce using rule 4 (instrucciones -> instruccion .)
    PRINT           reduce using rule 4 (instrucciones -> instruccion .)
    PRINTLN         reduce using rule 4 (instrucciones -> instruccion .)
    ID              reduce using rule 4 (instrucciones -> instruccion .)
    LOCAL           reduce using rule 4 (instrucciones -> instruccion .)
    GLOBAL          reduce using rule 4 (instrucciones -> instruccion .)
    FUNCTION        reduce using rule 4 (instrucciones -> instruccion .)
    WHILE           reduce using rule 4 (instrucciones -> instruccion .)
    RETURN          reduce using rule 4 (instrucciones -> instruccion .)
    BREAK           reduce using rule 4 (instrucciones -> instruccion .)
    CONTINUE        reduce using rule 4 (instrucciones -> instruccion .)
    $end            reduce using rule 4 (instrucciones -> instruccion .)
    END             reduce using rule 4 (instrucciones -> instruccion .)


state 4

    (5) instruccion -> imprimir_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 24

    fininstr                       shift and go to state 23

state 5

    (6) instruccion -> asignacion_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 24

    fininstr                       shift and go to state 25

state 6

    (7) instruccion -> declaracion_var_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 24

    fininstr                       shift and go to state 26

state 7

    (8) instruccion -> funciones_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 24

    fininstr                       shift and go to state 27

state 8

    (9) instruccion -> while_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 24

    fininstr                       shift and go to state 28

state 9

    (10) instruccion -> llamada_funcion_instr . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 24

    fininstr                       shift and go to state 29

state 10

    (11) instruccion -> sentencia_transferencia . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 24

    fininstr                       shift and go to state 30

state 11

    (12) instruccion -> error . fininstr
    (2) fininstr -> . PUNTOCOMA

    PUNTOCOMA       shift and go to state 24

    fininstr                       shift and go to state 31

state 12

    (56) imprimir_instr -> PRINT . PARENTESISA expresion PARENTESISC

    PARENTESISA     shift and go to state 32


state 13

    (57) imprimir_instr -> PRINTLN . PARENTESISA expresion PARENTESISC

    PARENTESISA     shift and go to state 33


state 14

    (48) asignacion_instr -> ID . IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (49) asignacion_instr -> ID . IGUAL expresion
    (64) llamada_funcion_instr -> ID . PARENTESISA PARENTESISC
    (65) llamada_funcion_instr -> ID . PARENTESISA parametros_llamada PARENTESISC

    IGUAL           shift and go to state 34
    PARENTESISA     shift and go to state 35


state 15

    (50) declaracion_var_instr -> LOCAL . ID
    (53) declaracion_var_instr -> LOCAL . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (55) declaracion_var_instr -> LOCAL . ID IGUAL expresion

    ID              shift and go to state 36


state 16

    (51) declaracion_var_instr -> GLOBAL . ID
    (52) declaracion_var_instr -> GLOBAL . ID IGUAL expresion DOSPUNTOS DOSPUNTOS tipo
    (54) declaracion_var_instr -> GLOBAL . ID IGUAL expresion

    ID              shift and go to state 37


state 17

    (58) funciones_instr -> FUNCTION . ID PARENTESISA PARENTESISC instrucciones END
    (59) funciones_instr -> FUNCTION . ID PARENTESISA parametros PARENTESISC instrucciones END

    ID              shift and go to state 38


state 18

    (69) while_instr -> WHILE . expresion instrucciones END
    (13) expresion -> . PARENTESISA expresion PARENTESISC
    (14) expresion -> . CADENA
    (15) expresion -> . CARACTER
    (16) expresion -> . ENTERO
    (17) expresion -> . DOBLE
    (18) expresion -> . NOTHING
    (19) expresion -> . ID
    (20) expresion -> . bandera
    (21) expresion -> . expresion MAS expresion
    (22) expresion -> . expresion MENOS expresion
    (23) expresion -> . expresion ASTERISCO expresion
    (24) expresion -> . expresion DIVISION expresion
    (25) expresion -> . expresion POTENCIA expresion
    (26) expresion -> . expresion PORCENTAJE expresion
    (27) expresion -> . expresion IGUALIGUAL expresion
    (28) expresion -> . expresion DIFERENTE expresion
    (29) expresion -> . expresion MENOR expresion
    (30) expresion -> . expresion MAYOR expresion
    (31) expresion -> . expresion MENORIGUAL expresion
    (32) expresion -> . expresion MAYORIGUAL expresion
    (33) expresion -> . expresion AND expresion
    (34) expresion -> . expresion OR expresion
    (35) expresion -> . NOT expresion
    (36) expresion -> . MENOS expresion
    (37) expresion -> . llamada_funcion_instr
    (38) expresion -> . PARSE PARENTESISA INT64 COMA expresion PARENTESISC
    (39) expresion -> . PARSE PARENTESISA FLOAT64 COMA expresion PARENTESISC
    (40) expresion -> . STRING PARENTESISA expresion PARENTESISC
    (41) bandera -> . TRUE
    (42) bandera -> . FALSE
    (64) llamada_funcion_instr -> . ID PARENTESISA PARENTESISC
    (65) llamada_funcion_instr -> . ID PARENTESISA parametros_llamada PARENTESISC

    PARENTESISA     shift and go to state 40
    CADENA          shift and go to state 41
    CARACTER        shift and go to state 42
    ENTERO          shift and go to state 43
    DOBLE           shift and go to state 44
    NOTHING         shift and go to state 45
    ID              shift and go to state 46
    NOT             shift and go to state 49
    MENOS           shift and go to state 48
    PARSE           shift and go to state 51
    STRING          shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54

    expresion                      shift and go to state 39
    bandera                        shift and go to state 47
    llamada_funcion_instr          shift and go to state 50

state 19

    (70) sentencia_transferencia -> RETURN . expresion
    (71) sentencia_transferencia -> RETURN .
    (13) expresion -> . PARENTESISA expresion PARENTESISC
    (14) expresion -> . CADENA
    (15) expresion -> . CARACTER
    (16) expresion -> . ENTERO
    (17) expresion -> . DOBLE
    (18) expresion -> . NOTHING
    (19) expresion -> . ID
    (20) expresion -> . bandera
    (21) expresion -> . expresion MAS expresion
    (22) expresion -> . expresion MENOS expresion
    (23) expresion -> . expresion ASTERISCO expresion
    (24) expresion -> . expresion DIVISION expresion
    (25) expresion -> . expresion POTENCIA expresion
    (26) expresion -> . expresion PORCENTAJE expresion
    (27) expresion -> . expresion IGUALIGUAL expresion
    (28) expresion -> . expresion DIFERENTE expresion
    (29) expresion -> . expresion MENOR expresion
    (30) expresion -> . expresion MAYOR expresion
    (31) expresion -> . expresion MENORIGUAL expresion
    (32) expresion -> . expresion MAYORIGUAL expresion
    (33) expresion -> . expresion AND expresion
    (34) expresion -> . expresion OR expresion
    (35) expresion -> . NOT expresion
    (36) expresion -> . MENOS expresion
    (37) expresion -> . llamada_funcion_instr
    (38) expresion -> . PARSE PARENTESISA INT64 COMA expresion PARENTESISC
    (39) expresion -> . PARSE PARENTESISA FLOAT64 COMA expresion PARENTESISC
    (40) expresion -> . STRING PARENTESISA expresion PARENTESISC
    (41) bandera -> . TRUE
    (42) bandera -> . FALSE
    (64) llamada_funcion_instr -> . ID PARENTESISA PARENTESISC
    (65) llamada_funcion_instr -> . ID PARENTESISA parametros_llamada PARENTESISC

    PUNTOCOMA       reduce using rule 71 (sentencia_transferencia -> RETURN .)
    PARENTESISA     shift and go to state 40
    CADENA          shift and go to state 41
    CARACTER        shift and go to state 42
    ENTERO          shift and go to state 43
    DOBLE           shift and go to state 44
    NOTHING         shift and go to state 45
    ID              shift and go to state 46
    NOT             shift and go to state 49
    MENOS           shift and go to state 48
    PARSE           shift and go to state 51
    STRING          shift and go to state 52
    TRUE            shift and go to state 53
    FALSE           shift and go to state 54

    expresion                      shift and go to state 55
    bandera                        shift and go to state 47
    llamada_funcion_instr          shift and go to state 50

state 20

    (72) sentencia_transferencia -> BREAK .

    PUNTOCOMA       reduce using rule 72 (sentencia_transferencia -> BREAK .)


state 21

    (73) sentencia_transferencia -> CONTINUE .

    PUNTOCOMA       reduce using rule 73 (sentencia_transferencia -> CONTINUE .)


state 22

    (3) instrucciones -> instrucciones instruccion .

    error           reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    PRINT           reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    PRINTLN         reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    LOCAL           reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    GLOBAL          reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    FUNCTION        reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    WHILE           reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    RETURN          reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    BREAK           reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    CONTINUE        reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 3 (instrucciones -> instrucciones instruccion .)
    END             reduce using rule 3 (instrucciones -> instrucciones instruccion .)


state 23

    (5) instruccion -> imprimir_instr fininstr .

    error           reduce using rule 5 (instruccion -> imprimir_instr fininstr .)
    PRINT           reduce using rule 5 (instruccion -> imprimir_instr fininstr .)
    PRINTLN         reduce using rule 5 (instruccion -> imprimir_instr fininstr .)
    ID              reduce using rule 5 (instruccion -> imprimir_instr fininstr .)
    LOCAL           reduce using rule 5 (instruccion -> imprimir_instr fininstr .)
    GLOBAL          reduce using rule 5 (instruccion -> imprimir_instr fininstr .)
    FUNCTION        reduce using rule 5 (instruccion -> imprimir_instr fininstr .)
    WHILE           reduce using rule 5 (instruccion -> imprimir_instr fininstr .)
    RETURN          reduce using rule 5 (instruccion -> imprimir_instr fininstr .)
    BREAK           reduce using rule 5 (instruccion -> imprimir_instr fininstr .)
    CONTINUE        reduce using rule 5 (instruccion -> imprimir_instr fininstr .)
    $end            reduce using rule 5 (instruccion -> imprimir_instr fininstr .)
    END             reduce using rule 5 (instruccion -> imprimir_instr fininstr .)


state 24

    (2) fininstr -> PUNTOCOMA .

    error           reduce using rule 2 (fininstr -> PUNTOCOMA .)
    PRINT           reduce using rule 2 (fininstr -> PUNTOCOMA .)
    PRINTLN         reduce using rule 2 (fininstr -> PUNTOCOMA .)
    ID              reduce using rule 2 (fininstr -> PUNTOCOMA .)
    LOCAL           reduce using rule 2 (fininstr -> PUNTOCOMA .)
    GLOBAL          reduce using rule 2 (fininstr -> PUNTOCOMA .)
    FUNCTION        reduce using rule 2 (fininstr -> PUNTOCOMA .)
    WHILE           reduce using rule 2 (fininstr -> PUNTOCOMA .)
    RETURN          reduce using rule 2 (fininstr -> PUNTOCOMA .)
    BREAK           reduce using rule 2 (fininstr -> PUNTOCOMA .)
    CONTINUE        reduce using rule 2 (fininstr -> PUNTOCOMA .)
    $end            reduce using rule 2 (fininstr -> PUNTOCOMA .)
    END             reduce using rule 2 (fininstr -> PUNTOCOMA .)


state 25

    (6) instruccion -> asignacion_instr fininstr .

    error           reduce using rule 6 (instruccion -> asignacion_instr fininstr .)
    PRINT           reduce using rule 6 (instruccion -> asignacion_instr fininstr .)
    PRINTLN         reduce using rule 6 (instruccion -> asignacion_instr fininstr .)
    ID              reduce using rule 6 (instruccion -> asignacion_instr fininstr .)
    LOCAL           reduce using rule 6 (instruccion -> asignacion_instr fininstr .)
    GLOBAL          reduce using rule 6 (instruccion -> asignacion_instr fininstr .)
    FUNCTION        reduce using rule 6 (instruccion -> asignacion_instr fininstr .)
    WHILE           reduce using rule 6 (instruccion -> asignacion_instr fininstr .)
    RETURN          reduce using rule 6 (instruccion -> asignacion_instr fininstr .)
    BREAK           reduce using rule 6 (instruccion -> asignacion_instr fininstr .)
    CONTINUE        reduce using rule 6 (instruccion -> asignacion_instr fininstr .)
    $end            reduce using rule 6 (instruccion -> asignacion_instr fininstr .)
    END             reduce using rule 6 (instruccion -> asignacion_instr fininstr .)


state 26

    (7) instruccion -> declaracion_var_instr fininstr .

    error           reduce using rule 7 (instruccion -> declaracion_var_instr fininstr .)
    PRINT           reduce using rule 7 (instruccion -> declaracion_var_instr fininstr .)
    PRINTLN         reduce using rule 7 (instruccion -> declaracion_var_instr fininstr .)
    ID              reduce using rule 7 (instruccion -> declaracion_var_instr fininstr .)
    LOCAL           reduce using rule 7 (instruccion -> declaracion_var_instr fininstr .)
    GLOBAL          reduce using rule 7 (instruccion -> declaracion_var_instr fininstr .)
    FUNCTION        reduce using rule 7 (instruccion -> declaracion_var_instr fininstr .)
    WHILE           reduce using rule 7 (instruccion -> declaracion_var_instr fininstr .)
    RETURN          reduce using rule 7 (instruccion -> declaracion_var_instr fininstr .)
    BREAK           reduce using rule 7 (instruccion -> declaracion_var_instr fininstr .)
    CONTINUE        reduce using rule 7 (instruccion -> declaracion_var_instr fininstr .)
    $end            reduce using rule 7 (instruccion -> declaracion_var_instr fininstr .)
    END             reduce using rule 7 (instruccion -> declaracion_var_instr fininstr .)


state 27

    (8) instruccion -> funciones_instr fininstr .

    error           reduce using rule 8 (instruccion -> funciones_instr fininstr .)
    PRINT           reduce using rule 8 (instruccion -> funciones_instr fininstr .)
    PRINTLN         reduce using rule 8 (instruccion -> funciones_instr fininstr .)
    ID              reduce using rule 8 (instruccion -> funciones_instr fininstr .)
    LOCAL           reduce using rule 8 (instruccion -> funciones_instr fininstr .)
    GLOBAL          reduce using rule 8 (instruccion -> funciones_instr fininstr .)
    FUNCTION        reduce using rule 8 (instruccion -> funciones_instr fininstr .)
    WHILE           reduce using rule 8 (instruccion -> funciones_instr fininstr .)
    RETURN          reduce using rule 8 (instruccion -> funciones_instr fininstr .)
    BREAK           reduce using rule 8 (instruccion -> funciones_instr fininstr .)
    CONTINUE        reduce using rule 8 (instruccion -> funciones_instr fininstr .)
    $end            reduce using rule 8 (instruccion -> funciones_instr fininstr .)
    END             reduce using rule 8 (instruccion -> funciones_instr fininstr .)


state 28

    (9) instruccion -> while_instr fininstr .

    error           reduce using rule 9 (instruccion -> while_instr fininstr .)
    PRINT           reduce using rule 9 (instruccion -> while_instr fininstr .)
    PRINTLN         reduce using rule 9 (instruccion -> while_instr fininstr .)
    ID              reduce using rule 9 (instruccion -> while_instr fininstr .)
    LOCAL           reduce using rule 9 (instruccion -> while_instr fininstr .)
    GLOBAL          reduce using rule 9 (instruccion -> while_instr fininstr .)
    FUNCTION        reduce using rule 9 (instruccion -> while_instr fininstr .)
    WHILE           reduce using rule 9 (instruccion -> while_instr fininstr .)
    RETURN          reduce using rule 9 (instruccion -> while_instr fininstr .)
    BREAK           reduce using rule 9 (instruccion -> while_instr fininstr .)
    CONTINUE        reduce using rule 9 (instruccion -> while_instr fininstr .)
    $end            reduce using rule 9 (instruccion -> while_instr fininstr .)
    END             reduce using rule 9 (instruccion -> while_instr fininstr .)


state 29

    (10) instruccion -> llamada_funcion_instr fininstr .

    error           reduce using rule 10 (instruccion -> llamada_funcion_instr fininstr .)
    PRINT           reduce using rule 10 (instruccion -> llamada_funcion_instr fininstr .)
    PRINTLN         reduce using rule 10 (instruccion -> llamada_funcion_instr fininstr .)
    ID              reduce using rule 10 (instruccion -> llamada_funcion_instr fininstr .)
    LOCAL           reduce using rule 10 (instruccion -> llamada_funcion_instr fininstr .)
    GLOBAL          reduce using rule 10 (instruccion -> llamada_funcion_instr fininstr .)
    FUNCTION        reduce using rule 10 (instruccion -> llamada_funcion_instr fininstr .)
    WHILE           reduce using rule 10 (instruccion -> llamada_funcion_instr fininstr .)
    RETURN          reduce using rule 10 (instruccion -> llamada_funcion_instr fininstr .)
    BREAK           reduce using rule 10 (instruccion -> llamada_funcion_instr fininstr .)
    CONTINUE        reduce using rule 10 (instruccion -> llamada_funcion_instr fininstr .)
    $end            reduce using rule 10 (instruccion -> llamada_funcion_instr fininstr .)
    END             reduce using rule 10 (instruccion -> llamada_funcion_instr fininstr .)


state 30

    (11) instruccion -> sentencia_transferencia fininstr .

    error           reduce using rule 11 (instruccion -> sentencia_transferencia fininstr .)
    PRINT           reduce using rule 11 (instruccion -> sentencia_transferencia fininstr .)
    PRINTLN         reduce using rule 11 (instruccion -> sentencia_transferencia fininstr .)
    ID              reduce using rule 11 (instruccion -> sentencia_transferencia fininstr .)
    LOCAL           reduce using rule 11 (instruccion -> sentencia_transferencia fininstr .)
    GLOBAL          reduce using rule 11 (instruccion -> sentencia_transferencia fininstr .)
    FUNCTION        reduce using rule 11 (instruccion -> sentencia_transferencia fininstr .)
    WHILE           reduce using rule 11 (instruccion -> sentencia_transferencia fininstr .)
    RETURN          reduce using rule 11 (instruccion -> sentencia_transferencia fininstr .)
    BREAK           reduce using rule 11 (instruccion -> sentencia_transferencia fininstr .)
    CONTINUE        reduce using rule 11 (instruccion -> sentencia_transferencia fininstr .)
    $end            reduce using rule 11 (instruccion -> sentencia_transferencia fininstr .)
    END             reduce using rule 11 (instruccion -> sentencia_transferencia fininstr .)


state 31

    (12) instruccion -> error fininstr .

    error           reduce using rule 12 (instruccion -> error fininstr .)
    PRINT           reduce using rule 12 (instruccion -> error fininstr .)
    PRINTLN         reduce using rule 12 (instruccion -> error fininstr .)
    ID              reduce using rule 12 (instruccion -> error fininstr .)
    LOCAL           reduce using rule 12 (instruccion -> error fininstr .)
    GLOBAL          reduce using rule 12 (instruccion -> error fininstr .)
    FUNCTION        reduce using rule 12 (instruccion -> error fininstr .)
    WHILE           reduce using rule 12 (instruccion -> error fininstr .)
    RETURN          reduce using rule 12 (instruccion -> error fininstr .)
    BREAK           reduce using rule 12 (instruccion -> error fininstr .)
    CONTINUE        reduce using rule 12 (instruccion -> error fininstr .)
    $end            reduce using rule 12 (instruccion -> error fininstr .)
    END             reduce using rule 12 (instruccion -> error fininstr .)


state 32
